--- a/Frontend/TS/TS_01.md
+++ b/Frontend/TS/TS_01.md
@@ -9,31 +9,9 @@ function add(num1:number, num2:number):number {
 }
 let s2 = "Hello s2"; // s2 is `string`
 ```
-JavaScript的运行环境无法识别TypeScript代码，TS项目想要运行，则必须先编译成JS代码，在编译时，会将类型声明和类型相关的代码全部删除，只保留可以运行的JS代码，并且不会改变JS的运行结果。
+JavaScript的运行环境无法识别TypeScript代码，TS项目想要运行，则必须先编译成JS代码，在编译时，会将类型声明和类型相关的代码全部删除，只保留可以运行的JS代码，并且不会改变JS的运行结果。因此，TS的类型检查只是**编译时**的类型检查，而不是运行时的类型检查，一旦TS代码编译为JS，运行时就不再检查类型了。
 
-因此，TS的类型检查只是**编译时**的类型检查，而不是运行时的类型检查，一旦TS代码编译为JS，运行时就不再检查类型了。
-
-
-
-TS的类型检查只是**编译时**的类型检查，TS没有运行环境只有编译器，无法在JS的运行环境中运行TS代码。TS项目想要运行，则必须先编译为JS代码，编译时，会将类型声明和类型相关的代码全部删除，只留下可以运行的JS代码，并且不会改变JS的运行结果。
-
-
-> 类型声明：在标识符后面添加“冒号 + 类型”。变量的值应该与声明的类型一致，如果不一致，TypeScript 就会报错。另外，TypeScript 规定，变量只有赋值后才能使用，否则就会报错。
->
-> 类型声明并不是必需的，如果没有，TypeScript 会自己推断类型。
-JavaScript 的运行环境（浏览器和 Node.js）不认识 TypeScript 代码。所以，TypeScript 项目要想运行，必须先转为 JavaScript 代码，这个代码转换的过程就叫做“编译”（compile）。
-
-TypeScript 官方没有做运行环境，只提供编译器。编译时，会将类型声明和类型相关的代码全部删除，只留下能运行的 JavaScript 代码，并且不会改变 JavaScript 的运行结果。
-
-因此，TypeScript 的类型检查只是编译时的类型检查，而不是运行时的类型检查。一旦代码编译为 JavaScript，运行时就不再检查类型了。
-学习 TypeScript 需要分清楚“值”（value）和“类型”（type）。
-
-“类型”是针对“值”的，可以视为是后者的一个元属性。每一个值在 TypeScript 里面都是有类型的。比如，3是一个值，它的类型是number。
-
-TypeScript 代码只涉及类型，不涉及值。所有跟“值”相关的处理，都由 JavaScript 完成。
-
-这一点务必牢记。TypeScript 项目里面，其实存在两种代码，一种是底层的“值代码”，另一种是上层的“类型代码”。前者使用 JavaScript 语法，后者使用 TypeScript 的类型语法。
-
-它们是可以分离的，TypeScript 的编译过程，实际上就是把“类型代码”全部拿掉，只保留“值代码”。
-
-编写 TypeScript 项目时，不要混淆哪些是值代码，哪些是类型代码。
+**值(value)**和**类型(type)**
+- 每个值在TS中都是有类型的，例如`42`是一个值，它的类型是`number`。
+- TS代码只涉及*类型*，不涉及*值*，所有与*值*相关的处理，都由JS完成。
+- TS项目中，其实存在两种代码，使用JS语法的“值代码”和使用TS类型语法的“类型代码”，TS的编译过程，就是将“类型代码”删除，只保留“值代码”。
