--- a/Frontend/TS/TS_01.md
+++ b/Frontend/TS/TS_01.md
@@ -11,7 +11,81 @@ let s2 = "Hello s2"; // s2 is `string`
 ```
 JavaScript的运行环境无法识别TypeScript代码，TS项目想要运行，则必须先编译成JS代码，在编译时，会将类型声明和类型相关的代码全部删除，只保留可以运行的JS代码，并且不会改变JS的运行结果。因此，TS的类型检查只是**编译时**的类型检查，而不是运行时的类型检查，一旦TS代码编译为JS，运行时就不再检查类型了。
 
-**值(value)**和**类型(type)**
-- 每个值在TS中都是有类型的，例如`42`是一个值，它的类型是`number`。
-- TS代码只涉及*类型*，不涉及*值*，所有与*值*相关的处理，都由JS完成。
-- TS项目中，其实存在两种代码，使用JS语法的“值代码”和使用TS类型语法的“类型代码”，TS的编译过程，就是将“类型代码”删除，只保留“值代码”。
+- **值(value)**和**类型(type)**
+
+	- 每个值在TS中都是有类型的，例如`42`是一个值，它的类型是`number`。
+	- TS代码只涉及*类型*，不涉及*值*，所有与*值*相关的处理，都由JS完成。
+	- TS项目中，其实存在两种代码，使用JS语法的“值代码”和使用TS类型语法的“类型代码”，TS的编译过程，就是将“类型代码”删除，只保留“值代码”。
+
+### `any`、`unknown`和`never`类型
+```ts
+// `any`类型，不推荐使用
+let x:any;
+x = 1;
+x = 'hello';
+// `unknown`类型
+let y:unknown = 1;
+if(typeof y === 'number') {
+  console.log(y + 42);
+}
+```
+
+#### `any`类型
+> TS进行类型推断时，如果无法推断出类型，就会认为该变量类型是`any`，可以通过打开编译选项**`noImplicitAny`**，只要推断出`any`类型就报错。
+>
+> 声明变量，但是不赋值，例如`let x;`，类型推断会将`x`设置为`any`类型，此时即使打开`noImplicitAny`，也不会报错，因此使用`let`和`var`声明变量时，如果不赋值，就一定要**显式声明类型**。
+
+- `any`类型可以被赋予任意类型的值。
+- TS会关闭对`any`类型变量的类型检查，即使类型错误，只要句法正确，就不会报错。
+- `any`类型是其他所有类型的全集，称为“**顶层类型(top type)**”。
+
+#### `unknown`类型
+
+- `unknown`类型是“**顶层类型(top type)**”，所有类型的值都可以分配给`unknown`类型。但是它不像`any`那样自由，可以被视为严格版的`any`。
+- `unknown`类型的变量不能赋值给除`any`和`unknown`以外其他类型的变量。
+- 不能直接调用`unknown`类型变量的方法和属性。
+- `unknown`类型支持的运算符：`==`、`===`、`!=`、`!==`、`||`、`&&`、`?`、`!`、`typeof`、`instanceof`，其他运算符会直接报错
+- 通过“类型缩小”，`unknown`类型变量才可以使用。
+
+#### `never`类型
+
+- `never`类型即**空类型**，不包含任何值，无法为它赋任何值。
+- `never`类型是**“底层类型(bottom type)”**，任何类型都包含`never`类型。
+- `never`类型可以赋值给其他任意类型。
+
+```ts
+// 1. `never`类型无法赋值
+let x: never;
+// 2. `never`类型
+function fn(x: number | string) {
+  if (typeof x === 'number') {
+    // do something
+  } else if (typeof x === 'string') {
+    // do something
+  } else {
+    throw new Error('x should be `number` or `string`.');
+  }
+}
+let n: any = true;
+fn(n); // Error: x should be `number` or `string`.
+// 3. `never`类型可以赋值给任意类型
+function fn2(): never {
+  throw new Error('Error: return never');
+}
+const num: number = fn2();
+const str: string = fn2();
+const bool: boolean = fn2();
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
