--- a/Frontend/TS/TS_01.md
+++ b/Frontend/TS/TS_01.md
@@ -30,7 +30,7 @@ if(typeof y === 'number') {
 }
 ```
 
-#### `any`类型
+### `any`类型
 > TS进行类型推断时，如果无法推断出类型，就会认为该变量类型是`any`，可以通过打开编译选项**`noImplicitAny`**，只要推断出`any`类型就报错。
 >
 > 声明变量，但是不赋值，例如`let x;`，类型推断会将`x`设置为`any`类型，此时即使打开`noImplicitAny`，也不会报错，因此使用`let`和`var`声明变量时，如果不赋值，就一定要**显式声明类型**。
@@ -39,18 +39,38 @@ if(typeof y === 'number') {
 - TS会关闭对`any`类型变量的类型检查，即使类型错误，只要句法正确，就不会报错。
 - `any`类型是其他所有类型的全集，称为“**顶层类型(top type)**”。
 
-#### `unknown`类型
+### `unknown`类型
 
-- `unknown`类型是“**顶层类型(top type)**”，所有类型的值都可以分配给`unknown`类型。但是它不像`any`那样自由，可以被视为严格版的`any`。
-- `unknown`类型的变量不能赋值给除`any`和`unknown`以外其他类型的变量。
+- `unknown`类型是**顶层类型(top type)**，任何类型的值都可以赋值给`unknown`类型；`unknown`类型的变量不能赋值给除`any`和`unknown`以外的其他类型。
 - 不能直接调用`unknown`类型变量的方法和属性。
+- `unknown`类型支持的运算符：比较运算符(`==`、`===`、`!=`、`!==`、`||`、`&&`、`?`)，取反运算符(`!`)，`typeof`和`instanceof`。
+```ts
+// 1. 任意类型都可以赋值给`unknown`
+let x: unknown;
+x = 42;
+x = 'hello';
+x = false;
+// 2. `unknown`不能赋值给其他类型
+let y: unknown = 42;
+let v1: boolean = y; // 报错：Type 'unknown' is not assignable to type 'boolean'.
+let v2: string = y; // 报错：Type 'unknown' is not assignable to type 'string'.
+// 3. 不能调用`unknown`变量的方法和属性
+let v3: unknown = { name: 'remilia' };
+console.log(v3.name); // 报错：'v3' is of type 'unknown'.
+let v4: unknown = 'hello';
+v4.trim(); // 报错：'v4' is of type 'unknown'.
+let v5: unknown = (n: number) => n + 1;
+console.log(v5(42)); // 报错：'v5' is of type 'unknown'.
+```
+
+
 - `unknown`类型支持的运算符：`==`、`===`、`!=`、`!==`、`||`、`&&`、`?`、`!`、`typeof`、`instanceof`，其他运算符会直接报错
 - 通过“类型缩小”，`unknown`类型变量才可以使用。
 
-#### `never`类型
+### `never`类型
 
 - `never`类型即**空类型**，不包含任何值，无法为它赋任何值。
-- `never`类型是**“底层类型(bottom type)”**，任何类型都包含`never`类型。
+- `never`类型是**底层类型(bottom type)**，任何类型都包含`never`类型。
 - `never`类型可以赋值给其他任意类型。
 
 ```ts
