--- a/Frontend/TS/TS_0530_01.md
+++ b/Frontend/TS/TS_0530_01.md
@@ -18,6 +18,7 @@ enum Operator {
 // 代码不关注常量具体值，只需要使用它们的名称即可。
 function compute(op: Operator, x: number, y: number): number {
   switch (op) {
+  	// `.`或`[]`运算符可以获取某个成员，等同的写法: Operator['ADD']
     case Operator.ADD:
       return x + y;
     case Operator.SUB:
@@ -32,6 +33,20 @@ function compute(op: Operator, x: number, y: number): number {
 }
 ```
 
+`Enum`编译后是一个对象，不能有与他同名的变量（对象、函数、类等），一般情况下`Enum`结构可以被对象的`as const`断言替代。
+```ts
+enum E1 {
+  X,
+  Y,
+  Z,
+}
+// 等价于
+const E2 = {
+  X: 0,
+  Y: 1,
+  Z: 2,
+} as const;
+```
 
 
 
