--- a/Frontend/TS/TS_0530_01.md
+++ b/Frontend/TS/TS_0530_01.md
@@ -40,21 +40,37 @@ enum E1 {
   Y,
   Z,
 }
-// 等价于
 const E2 = {
   X: 0,
   Y: 1,
   Z: 2,
 } as const;
+
+if(x === E1.X) {}
+// 等价于
+if(x === E2.X) {}
 ```
 
+### `Enum`成员的值
+
+- `Enum`成员值默认从0开始，逐一递增。
+- `Enum`成员值可以显示赋值，值类型可以是`number`和`string`，可以混合赋值。
+- 字符串 Enum 可以使用联合类型（union）代替。
+- `Enum`成员值都是只读的，不能重新赋值，因此声明`Enum`类型时，通常会添加`const`修饰符。
+> 如果希望加上const关键词后，运行时还能访问 Enum 结构（即编译后依然将 Enum 转成对象），需要在编译时打开preserveConstEnums编译选项。
+
+### 同名`Enum`的合并
+
+> 同名 Enum 的合并，最大用处就是补充外部定义的 Enum 结构。
+
+- 多个同名的`Enum`结构会自动合并。
+- Enum 结构合并时，只允许其中一个的首成员省略初始值，否则报错。
+- 同名 Enum 合并时，不能有同名成员，否则报错。
+- 同名 Enum 合并的另一个限制是，所有定义必须同为 const 枚举或者非 const 枚举，不允许混合使用。
+
+### keyof运算符
+- keyof 运算符可以取出 Enum 结构的所有成员名，作为联合类型返回。
+- 如果要返回 Enum 所有的成员值，可以使用in运算符。
 
 
 
-
-类型，是被设计为用于存放相关常量的容器。
-
-> 谨慎使用`Enum`结构，它不仅仅是类型，还会为编译后的代码加入一个对象。`Enum`比较适合的场景是，成员的值不重要，名字更重要，从而增加代码的可读性和可维护性。
-
-经常需要定义一组相关的常量。
-TypeScript 就设计了 Enum 结构，用来将相关常量放在一个容器里面，方便使用。
