--- a/Frontend/TS/TS_0531_03.md
+++ b/Frontend/TS/TS_0531_03.md
@@ -14,6 +14,7 @@ let arr1: number[] = [0, 2, 4, 6, 8];
 // 数组Item的类型是`number`或`string`
 let arr2: (number | string)[] = ['a', 1, 'b', 3, 5];
 
+// 数组泛型写法声明：
 // 数组Item的类型是`number`
 let arr3: Array<number> = [1, 3, 5, 7, 9];
 // 数组Item的类型是`number`或`string`
@@ -22,10 +23,43 @@ let arr4: Array<number | string> = ['a', 'b', 'c', 42];
 
 #### 类型推断
 
-TypeScript 数组有一个根本特征：所有成员的类型必须相同，但是成员数量是不确定的，可以是无限数量的成员，也可以是零成员。
-数组的成员是可以动态变化的。
-正是由于成员数量可以动态变化，所以 TypeScript 不会对数组边界进行检查，越界访问数组并不会报错。
-TypeScript 允许使用方括号读取数组成员的类型。
+如果数组变量没有声明类型，TS会根据初始值推断数组的类型：
+```ts
+let arr1 = [];             // any[]
+let arr2 = [42];           // number[]
+let arr3 = ['hello'];      // string[]
+let arr4 = [42, 'hello'];  // (number | string)[]
+```
+
+#### 只读数组
+
+- `readonly`关键字声明只读数组，增加、删除、修改数组成员都会报错。
+- `readonly`**不能**与数组泛型写法一起使用，泛型只读数组：`ReadonlyArray<T>`和`Readonly<T[]>`
+- `as const`(**const断言**)也可以声明只读数组。
+
+```ts
+// `readonly`
+const arr1: readonly number[] = [1, 3, 5, 7, 9];
+// `number[]`是`readonly number[]`的子类型，因为它比只读数组多了`pop()`、`push()`等方法
+const arr2: number[] = [2, 4, 42];
+const arr3: readonly number[] = arr2;
+// 泛型声明数组
+const arr4: ReadonlyArray<number> = [2, 4, 42];
+const arr5: Readonly<number[]> = [2, 4, 42];
+// `as const`断言
+const arr6 = [2, 4];          // number[]
+const arr7 = [2, 4] as const; // readonly [2, 4]
+```
+
+#### 多维数组
+
+TS使用`T[][]`格式声明二维数组，`T`是底层数组成员的类型：
+```ts
+const mdArray: number[][] = [
+  [1, 3, 5],
+  [2, 4, 6],
+];
+```
 
 
 
