--- a/Frontend/JS_0605_01.md
+++ b/Frontend/JS_0605_01.md
@@ -1,7 +1,6 @@
 ## 创建对象
 
-虽然使用 Object 构造函数或对象字面量可以方便地创建对象，但这些方式也有明显不足:创建具
-有同样接口的多个对象需要重复编写很多代码。
+通过`Object`构造函数或对象字面量可以很方便地创建对象，但是创建具有相同接口的多个对象需要编写很多重复的代码。
 
 > 工厂模式，构造器模式，原型模式
 
@@ -10,6 +9,7 @@
 工厂模型可以解决创建多个类型对象重复代码的问题，但是没有解决对象表示问题，即新创建的对象是什么类型。
 
 ```js
+// 工厂方法
 function createPerson(name, age, job) {
   let person = new Object();
   person.name = name;
@@ -26,7 +26,8 @@ let person2 = createPerson('Greg', 27, 'Docker');
 
 ### 构造函数模式
 
-> 构造函数，用于创建特定类型的对象。定义自定义构造函数可以确保实例被标识为特定类型
+自定义**构造函数**，通过`new`操作符创建对象实例，可以确保创建的对象实例都被标识为特定类型。
+
 ```js
 // 自定义构造函数
 function Person(name, age, job) {
@@ -40,7 +41,47 @@ function Person(name, age, job) {
 // `new`操作符创建Person实例
 let person = new Person('Nicholas', 29, 'Software Engineer');
 ```
-person1和person2分别保存着Person的不同实例，这两个对象都有一个`constructor`属性指向Person
+
+创建的对象实例的`constructor`属性保存着对象的类型，可以通过`instanceof`操作符确认对象类型。
+
+```js
+console.log(person.constructor); // [Function: Person]
+console.log(person.constructor === Person); // true
+console.log(person instanceof Object); // true
+console.log(person instanceof Person); // true
+```
+
+**构造函数也是函数**
+
+- `new`操作符创建的是一个新的对象实例，`this`指向新创建的对象。
+- 直接调用构造函数，`this`会指向Global对象（浏览器环境是`window`，Nodejs环境是`global`）。
+- 通过`call()`或`apply()`调用函数，`this`值会指向特定的对象。
+
+```js
+// 1.构造器创建新的实例对象，`this`指向新的实例对象。
+let person = new Person('Nicholas', 29, 'Software Engineer');
+person.sayName(); // Nicholas
+// 2.直接调用函数，`this`指向Global对象.
+Person('Greg', 27, 'Docker');
+// [nodejs]运行环境
+global.sayName(); // Greg
+// [浏览器]运行环境
+// window.sayName(); // Greg
+// 3. `call()`或`apply()`，`this`指向特定的对象
+let obj = new Object();
+Person.call(obj, 'Kristen', 25, 'Nurse');
+obj.sayName(); // Kristen
+```
+
+构造函数创建对象实例的缺点是**不同实例上的函数虽然同名，但是不相等**。
+```js
+// 对象中的方法是相同的，没必要创建一个实例时，都创建一遍。
+let person1 = new Person('Nicholas', 29, 'Software Engineer');
+let person2 = new Person('Kristen', 25, 'Nurse');
+console.log(person1.sayName == person2.sayName); // false
+```
+
+
 
 
 
