--- a/Frontend/JS/JS_对象_02.md
+++ b/Frontend/JS/JS_对象_02.md
@@ -4,18 +4,18 @@
 
 > 工厂模式，构造函数模式，原型模式
 
-| 方法                      | 描述                                                         |
-| ------------------------- | ------------------------------------------------------------ |
-| `isPrototypeOf()`         | 判断**参数的对象原型**是否指向调用者                         |
-| `hasOwnProperty()`        | 可以通过对象访问指定属性，并且该可访问的属性**在对象实例**上 |
-| `Object.getPrototypeOf()` | 返回参数的**对象原型**                                       |
-| `Object.setPrototypeOf()` | 为参数的对象原型设置新的值                                   |
-| `Object.create()`         | 创建新的对象实例，并将实例的对象原型指定为传入的参数         |
-|                           |                                                              |
-|                           |                                                              |
-|                           |                                                              |
-|                           |                                                              |
-|                           |                                                              |
+| 方法                             | 描述                                                         |
+| -------------------------------- | ------------------------------------------------------------ |
+| `isPrototypeOf()`                | 判断**参数的对象原型**是否指向调用者                         |
+| `hasOwnProperty()`               | 可以通过对象访问指定属性，并且该可访问的属性**在对象实例**上 |
+| `Object.getPrototypeOf()`        | 返回参数的**对象原型**                                       |
+| `Object.setPrototypeOf()`        | 为参数的对象原型设置新的值                                   |
+| `Object.create()`                | 创建新的对象实例，并将实例的对象原型指定为传入的参数         |
+| `Object.keys()`                  | 返回参数所有**可枚举实例属性名称**的字符串数组（不包括符号类型属性） |
+| `Object.getOwnPropertyNames()`   | 返回参数所有**实例属性名称**的字符串数组，无论是否可枚举（不包括符号类型属性） |
+| `Object.getOwnPropertySymbols()` | 返回参数所有**符号类型的实例属性**名称数组                   |
+|                                  |                                                              |
+|                                  |                                                              |
 
 ### 工厂模式(Factory Pattern)
 
@@ -176,7 +176,7 @@ console.log(Object.getPrototypeOf(barInstance)); // { y: 'hello' }
 console.log(barInstance.y); // hello
 ```
 
-通过对象访问属性时，会按照这个属性的名称先从对象实例开始搜索，如果找到则返回，如果没找到则从原型对象查找并返回。如果在对象实例上添加原型中同名属性，则会遮蔽(shadow)原型对象上的同名属性，即使将该属性设置为`null`，也会遮蔽。
+通过对象访问属性时，会按照这个属性的名称先从对象实例开始搜索，如果找到则返回，如果没找到则从原型对象查找并返回。如果在对象实例上添加原型中同名属性，则会**遮蔽(shadow)**原型对象上的同名属性，即使将该属性设置为`null`，也会遮蔽。
 
 ```js
 function Person() {}
@@ -216,4 +216,45 @@ function hasPrototypeProperty(obj, prop) {
   return prop in obj && !obj.hasOwnProperty(prop);
 }
 ```
+
+#### 对象迭代
+
+- 在`for-in`循环中使用`in`操作符时，**可以通过对象访问**且**可枚举**的属性都会返回，包括实例属性和原型属性。
+- `Object.keys()`方法接收一个对象作为参数，返回包含该对象所有**可枚举实例属性名称**的字符串数组。
+- `Object.getOwnPropertyNames()`方法返回的是所有**实例属性名称**的字符串数组，无论是否可枚举。
+- `Object.getOwnPropertySymbols()`方法返回的是符号类型(`Symbol`)的所有属性。
+
+```js
+function Person() {}
+Person.prototype.name = 'Nicholas';
+Person.prototype.age = 27;
+Person.prototype.sayName = function () {
+  console.log(this.name);
+};
+// 对象实例
+let person = new Person();
+person.name = 'Greg'; // 遮蔽原型属性
+person[Symbol()] = 'Symbol';
+Object.defineProperty(person, 'job', {
+  enumerable: false, // `job`属性不可枚举
+  value: 'Software Engineer',
+});
+// for-in循环时，可以通过对象访问且可枚举的属性都会返回，包括实例属性和原型属性。
+for (const propName in person) {
+  // name, age, sayName
+  console.log(propName);
+}
+// Object.keys()只会返回对象上所有可枚举的实例属性
+console.log(Object.keys(person)); // ['name']
+console.log(Object.keys(Person.prototype)); // [ 'name', 'age', 'sayName' ]
+// Object.getOwnPropertyNames()返回所有非符号类型的实例属性，无论是否可枚举
+console.log(Object.getOwnPropertyNames(person)); // [ 'name', 'job' ]
+console.log(Object.getOwnPropertyNames(Person.prototype)); // [ 'constructor', 'name', 'age', 'sayName' ]
+// Object.getOwnPropertySymbols()返回所有符号类型的实例属性
+console.log(Object.getOwnPropertySymbols(person)); // [ Symbol() ]
+```
+
+
+
+
 
