--- a/Frontend/JS/JS_对象_02.md
+++ b/Frontend/JS/JS_对象_02.md
@@ -11,7 +11,9 @@
 | `Object.getPrototypeOf()`        | 返回参数的**对象原型**                                       |
 | `Object.setPrototypeOf()`        | 为参数的对象原型设置新的值                                   |
 | `Object.create()`                | 创建新的对象实例，并将实例的对象原型指定为传入的参数         |
-| `Object.keys()`                  | 返回参数所有**可枚举实例属性名称**的字符串数组（不包括符号类型属性） |
+| `Object.keys()`                  | 返回所有**可枚举非符号类型实例属性**名称字符串数组           |
+| `Object.values()`                | 返回所有**可枚举非符号类型实例属性**属性值数组               |
+| `Object.entries()`               | 返回所有**可枚举非符号类型实例属性**键/值对数组`[ [propName, propValue], ... ]` |
 | `Object.getOwnPropertyNames()`   | 返回参数所有**实例属性名称**的字符串数组，无论是否可枚举（不包括符号类型属性） |
 | `Object.getOwnPropertySymbols()` | 返回参数所有**符号类型的实例属性**名称数组                   |
 |                                  |                                                              |
@@ -223,6 +225,8 @@ function hasPrototypeProperty(obj, prop) {
 - `Object.keys()`方法接收一个对象作为参数，返回包含该对象所有**可枚举实例属性名称**的字符串数组。
 - `Object.getOwnPropertyNames()`方法返回的是所有**实例属性名称**的字符串数组，无论是否可枚举。
 - `Object.getOwnPropertySymbols()`方法返回的是符号类型(`Symbol`)的所有属性。
+- `Object.values()`返回对象值的数组。
+- `Object.entries()`返回键/值对的数组。
 
 ```js
 function Person() {}
@@ -252,6 +256,14 @@ console.log(Object.getOwnPropertyNames(person)); // [ 'name', 'job' ]
 console.log(Object.getOwnPropertyNames(Person.prototype)); // [ 'constructor', 'name', 'age', 'sayName' ]
 // Object.getOwnPropertySymbols()返回所有符号类型的实例属性
 console.log(Object.getOwnPropertySymbols(person)); // [ Symbol() ]
+// Object.values()返回对象上所有可枚举的实例属性属性值数组
+console.log(Object.values(person)); // [ 'Greg' ]
+// Object.entries()返回对象上所有可枚举的实例属性键/值对的数组
+console.log(Object.entries(person)); // [ [ 'name', 'Greg' ] ]
+for (const propNameAndValue of Object.entries(person)) {
+  // name: Greg
+  console.log(`${propNameAndValue[0]}: ${propNameAndValue[1]}`);
+}
 ```
 
 
