--- a/Frontend/JS/JS_对象_02.md
+++ b/Frontend/JS/JS_对象_02.md
@@ -11,13 +11,11 @@
 | `Object.getPrototypeOf()`        | 返回参数的**对象原型**                                       |
 | `Object.setPrototypeOf()`        | 为参数的对象原型设置新的值                                   |
 | `Object.create()`                | 创建新的对象实例，并将实例的对象原型指定为传入的参数         |
-| `Object.keys()`                  | 返回所有**可枚举非符号类型实例属性**名称字符串数组           |
-| `Object.values()`                | 返回所有**可枚举非符号类型实例属性**属性值数组               |
-| `Object.entries()`               | 返回所有**可枚举非符号类型实例属性**键/值对数组`[ [propName, propValue], ... ]` |
+| `Object.keys()`                  | 返回所有**可枚举非Symbol实例属性**名称字符串数组           |
+| `Object.values()`                | 返回所有**可枚举非Symbol实例属性**属性值数组               |
+| `Object.entries()`               | 返回所有**可枚举非Symbol实例属性**键/值对数组`[ [propName, propValue], ... ]` |
 | `Object.getOwnPropertyNames()`   | 返回参数所有**实例属性名称**的字符串数组，无论是否可枚举（不包括符号类型属性） |
 | `Object.getOwnPropertySymbols()` | 返回参数所有**符号类型的实例属性**名称数组                   |
-|                                  |                                                              |
-|                                  |                                                              |
 
 ### 工厂模式(Factory Pattern)
 
@@ -266,7 +264,64 @@ for (const propNameAndValue of Object.entries(person)) {
 }
 ```
 
+#### 更多原型相关
 
+可以将对象原型直接赋值为**对象字面量**。重写对象原型会覆盖默认生成的对象原型的`constructor`属性，默认指向`Object`构造器。
 
+```js
+function Person() {}
+Person.prototype = {
+  name: 'Nicholas',
+  age: 29,
+};
+let person = new Person();
+// 设置对象字面量会覆盖默认的对象原型的`constructor`属性
+console.log(person.constructor == Person);
+console.log(person.constructor === Object);
+// `instanceof`操作符依然有效
+console.log(person instanceof Person);
+console.log(person instanceof Object);
+// 可以为对象原型设置`constructor`值，默认是不可枚举的，通过`Object.defineProperty()`设置
+Person.prototype = {
+  // constructor: Person,
+  name: 'Nicholas',
+  age: 29,
+};
+Object.defineProperty(Person.prototype, 'constructor', {
+  enumerable: false,
+  value: Person,
+});
+```
 
+所有**原生引用类型**的构造函数都在原型上定义了实例方法，通过原生对象的原型可以取得所有默认方法的引用，也可以给原生类型的实例**定义新的方法**。
 
+```js
+// 原生引用类型在对象原型上定义实例方法
+console.log(typeof Array.prototype.sort);       // function
+console.log(typeof String.prototype.substring); // function
+// 为`String`类型在对象原型上定义新的方法
+String.prototype.beginWith = function (text) {
+  return this.indexOf(text) === 0;
+};
+console.log('Hello World'.beginWith('Hello')); // true
+```
+
+原型模式也有一些缺点：弱化了向构造函数传递初始化参数的能力，所有实例默认都取得相同的属性值；原型上的所有属性在实例之间是共享的，会导致引用值的属性在一个实例中修改，在所有实例都生效（可以通过在实例上添加同名属性来简单地遮蔽原型上的属性）。
+
+```js
+function Foo() {}
+Foo.prototype.arr = [2, 4, 6];
+
+let foo1 = new Foo();
+let foo2 = new Foo();
+let foo3 = new Foo();
+// 遮蔽
+foo3.arr = Array.from(Foo.prototype.arr);
+console.log(foo1.arr); // [ 2, 4, 6 ]
+console.log(foo2.arr); // [ 2, 4, 6 ]
+console.log(foo3.arr); // [ 2, 4, 6 ]
+foo1.arr.push(10);
+console.log(foo1.arr); // [ 2, 4, 6, 10 ]
+console.log(foo2.arr); // [ 2, 4, 6, 10 ]
+console.log(foo3.arr); // [ 2, 4, 6 ]
+```
