--- a/DeepLearning/线性回归.md
+++ b/DeepLearning/线性回归.md
@@ -36,58 +36,55 @@ $$
 - 损失函数：一种模型质量的度量方式。
 - 梯度下降：一种能够更新模型以提高模型预测质量的方法。
 
+### 损失函数
 
+**损失函数（loss function）**能够量化目标的实际值与预测值之间的差距。
 
-回归（regression）
-
-
-
-分类
-
-预测（prediction）；预测一个值——回归问题；预测一个类别——分类问题
-
-
-
-
-
-
-
-训练数据集（training data set），训练集（training set）
-
-样本（sample），数据点（data point），数据样本（data instance）
-
-标签（label）或目标（target）
-
-特征（feature）或协变量（covariate）
-
-`n`表示数据集中的样本数
-
-
-
-线性回归（linear regression）
-$$
-price = w_{area} * area + w_{age} * age + b
-$$
-
-$$
-Y_1
-$$
-
-啊啊$$
-$$
-\vec{a}
-w_{area}
-$$
-行内公式：$w_{abc}$​
-
-
-
-$\vec {\hat w}$
-
-损失函数，模型质量的度量方式
-
-梯度下降，能够更新模型以提高模型预测质量的方法
+回归问题中最常用的损失函数是**平方误差函数**，样本 $i$ 的预测值为 $\hat y^{(i)}$，真实标签为 $y^{(i)}$，平方误差的定义如下：
 $$
 l^{(i)}(\vec w, b) = \dfrac{1}{2}({\hat y}^{(i)} - y^{(i)}) ^ 2
 $$
-$\dfrac{1}{2}$是为了在对损失函数求导之后常数系数为$1$。
+为了度量模型在整个数据集上的质量，我们需要计算在训练集 $n$ 个样本上的损失均值：
+$$
+L(\vec w, b) = \dfrac{1}{n}\sum_{i=1}^{n}l^{(i)}(\vec w, b) = \dfrac{1}{n}\sum_{i=1}^n\dfrac{1}{2}(\vec w^T\vec x^{(i)} + b - y^{(i)}) ^ 2
+$$
+在训练模型时，我们希望寻找一组参数 $(\vec w^*, b^*)$​ ，这组参数能最小化在所有训练样本上的总损失，即：
+$$
+\vec w^*, b^* = \underset{\vec w, b}{argmin}\text{ } L(\vec w, b)
+$$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
