--- a/Frontend/JS/JS_对象_03.md
+++ b/Frontend/JS/JS_对象_03.md
@@ -51,7 +51,8 @@ console.log(SubType.prototype.isPrototypeOf(instance));   // true
 
 #### 原型链的问题
 
-- 原型中包含的引用值会在所有实例间共享。
+- 原型中包含的引用值会在所有实例间共享。使用原型实现继承时，原型实际上变成了另一个类型 的实例。这意味着原先的实例属性摇身一变成为了原型属性。
+- 子类型在实例化时不能给父类型的构造函数传参。
 
 ### 盗用构造函数/对象伪装/经典继承
 
@@ -138,8 +139,7 @@ function createAnother(original) {
 
 
 
-
-
+{"电商/平台治理":["电商/平台治理","电商/平台治理/平台治理"],"电商/售后":["电商/售后","电商/售后/售后"],"电商/导购":["电商/导购","电商/导购/搜索","电商/导购/直播间","电商/导购/商城","电商/导购/店铺","电商/导购/购物车"],"电商/营销":["电商/营销","电商/营销/活动营销"],"电商/商业平台":["电商/商业平台","电商/商业平台/商家工作台","电商/商业平台/飞鸽","电商/商业平台/商家经营","电商/商业平台/商品供给","电商/商业平台/活动平台","电商/商业平台/开放生态","电商/商业平台/罗盘","电商/商业平台/商品成长"],"电商/交易中心":["电商/交易中心","电商/交易中心/交易中心"],"电商/商品中心":["电商/商品中心","电商/商品中心/库存","电商/商品中心/商品"],"电商/联盟生态":["电商/联盟生态","电商/联盟生态/联盟生态"],"电商/供应链与物流":["电商/供应链与物流","电商/供应链与物流/供应链与物流"],"电商/服务体验":["电商/服务体验","电商/服务体验/服务体验"]}
 
 
 
