--- a/SearchEngine/1.md
+++ b/SearchEngine/1.md
@@ -21,6 +21,33 @@
 通用搜索引擎迭代优化的方向是提升用户满意度。
 - **相关性**
 - 内容质量
+	- your life or your money，YMYL
 - 时效性
 - 个性化
 - 地域性
+
+
+#### 搜索引擎链路
+
+搜索引擎的链路主要分为：查询词处理(query processing, QP)、召回(retrieval)、排序(ranking)
+
+- QP：QP 是链路上的第一环，用自然语言处理(natural language processing，NLP)技术从 查询词中提取很多信息，共链路下游的召回和排序使用。
+	
+	- 分词
+	- 词权重：词权重主要用途是召回的丢词。对于长度较大的查询 词，完全匹配查询词的文档数量往往不足，此时需要丢弃权重低的词，增加召回的 文档数量。
+	- 改写
+	- 意图识别 
+
+- 召回：召回是链路上的第二环，从数亿的文档库中快速取回数万篇文档，并用简单的模型 和规则给文档打分，把分数最高的数千篇文档作为召回结果。搜索引擎通常有数十路召 回通道，它们可以分为 3 大类。
+
+	- 文本召回
+	- 向量召回：因此向量数据库提供近似最近邻索引(approximate nearest neighbor，ANN)，快速 从向量数据库中找出一批相似度高的文档向量。
+	- 其他补充召回通过离线计算建立 key-value(KV)索引，在线上直接读取索引，作 为召回结果。
+
+文本召回、向量召回检索到的文档数量过大，在送入排序之前，需要做一个快速的初步 筛选，我们称之为海选，具体方法与排序类似。
+
+- 排序：排序包括召回海选、粗排、精排，形成一个三级漏斗。
+
+
+
+
