--- a/Math/04.md
+++ b/Math/04.md
@@ -60,6 +60,7 @@ $$
 
 ### 杨辉三角，帕斯卡三角（`Pascal's triangle`）
 
+$(x+1)^n$展开后，按单项 *x* 的次数从高到低排列：
 
 $$
 \begin{array}{lcr}
@@ -73,7 +74,7 @@ $$
 \end{array}
 $$
 
-
+### 排列（`permutation`）组合（`combination`）
 
 
 
