--- a/Math/数学要素.md
+++ b/Math/数学要素.md
@@ -83,6 +83,7 @@ $$
 $$
 
 
+
 ### 矩阵 `matrix`
 
 $$
@@ -182,7 +183,7 @@ $$
 | 对称矩阵 `symmetric matrix` | 元素相对于主对角线轴对称的方阵，即$\boldsymbol{A}=\boldsymbol{A}^T$ | $\begin{bmatrix}1&-2&5\\-2&3&8\\5&8&1\end{bmatrix}$ |
 | 零矩阵 `null matrix`        | 所有元素都是 $0$ 的方阵                                      | $\begin{bmatrix}0&0&0\\0&0&0\\0&0&0\end{bmatrix}$   |
 
-**矩阵加减**
+#### 矩阵加减
 
 形状相同的矩阵之间可以进行加减法运算，计算方式是对应位置的元素加减运算。
 $$
@@ -214,6 +215,46 @@ b_{m,1}&&b_{m,2}&&\cdots&&b_{m,n}
 {a_{m,1} + b_{m,1}}&&{a_{m,2} + b_{m,2}}&&\cdots&&{a_{m,n} + b_{m,n}}
 \end{bmatrix}
 $$
+
+#### 矩阵乘法
+
+矩阵 $\boldsymbol{A}$ 和 $\boldsymbol{B}$ 相乘的前提是矩阵 $\boldsymbol{A}$ 的列数和矩阵 $\boldsymbol{B}$ 的行数相同，写作 $\boldsymbol{A}\boldsymbol{B}$，`numpy`中矩阵相乘运算符是`@`。
+$$
+\boldsymbol{C}_{m \times n} = \boldsymbol{A}_{m \times p}\boldsymbol{B}_{p \times n} = \boldsymbol{A}_{m \times p}\text{@}\boldsymbol{B}_{p \times n}
+$$
+矩阵乘法一般情况下**不满足交换律**。
+$$
+\boldsymbol{A}_{m \times p}\boldsymbol{B}_{p \times n} \neq \boldsymbol{B}_{p \times n}\boldsymbol{A}_{m \times p}
+$$
+<img src="./_Resources/matrix_times.png" style="zoom:30%;" />
+$$
+\boldsymbol{C}=\boldsymbol{A}\boldsymbol{B}=\begin{bmatrix}1&2\\3&4\end{bmatrix}\begin{bmatrix}4&2\\3&1\end{bmatrix}=\begin{bmatrix}1\times4+2\times3&&1\times2+2\times1\\3\times4+4\times3&&3\times2+4\times1\end{bmatrix}=\begin{bmatrix}10&4\\24&10\end{bmatrix}
+$$
+**两个向量相乘**
+
+向量 $\boldsymbol{a}$ 和 $\boldsymbol{b}$ 为等长列向量，$\boldsymbol{a}^T$ 乘 $\boldsymbol{b}$ 为标量，等价于 $\boldsymbol{a}$ 和 $\boldsymbol{b}$ 的标量积，即 $\boldsymbol{a}^T\boldsymbol{b}=\boldsymbol{a} \cdot \boldsymbol{b}$。$\boldsymbol{a}$ 乘 $\boldsymbol{b}^T$ 结果为方阵。
+$$
+\begin{array}{lcl}
+\boldsymbol{a} = \begin{bmatrix}1\\2\\3\end{bmatrix}, \quad 
+\boldsymbol{b}=\begin{bmatrix}4\\3\\2\end{bmatrix} \\
+\boldsymbol{a}^T\boldsymbol{b} 
+= \begin{bmatrix}1&2&3\end{bmatrix}\begin{bmatrix}4\\3\\2\end{bmatrix}
+= 1\times4+2\times3+3\times2=16\\
+\boldsymbol{a}\boldsymbol{b}^T 
+= \begin{bmatrix}1\\2\\3\end{bmatrix}\begin{bmatrix}4&3&2\end{bmatrix}
+= \begin{bmatrix}1\times4&1\times3&1\times2\\2\times4&2\times3&2\times2\\3\times4&3\times3&3\times2\end{bmatrix}
+= \begin{bmatrix}4&3&2\\8&6&4\\12&9&6\end{bmatrix}
+\end{array}
+$$
+**矩阵乘法**
+
+矩阵乘积 $\boldsymbol{A}\boldsymbol{B}$ 中，左侧矩阵 $\boldsymbol{A}$ 的形状是 $m \times p$，可以写成上下叠放的 $m$ 个行向量 $\boldsymbol{a}^{(i)}$，每个 $\boldsymbol{a}^{(i)}$ 有 $p$ 个元素。右侧矩阵 $\boldsymbol{B}$ 的形状是 $p \times n$，可以写成左右排列的 $n$ 个列向量。
+
+
+
+
+
+
 
 
 
