--- a/Math/04.md
+++ b/Math/04.md
@@ -74,3 +74,39 @@ $$
 
 ### 方程（`equation`）
 
+
+
+
+
+
+
+
+
+
+
+设 $\boldsymbol{v}$ 为单位向量，$\boldsymbol{a}$ 在 $\boldsymbol{v}$ 方向上的标量投影：
+$$
+\big\Vert\boldsymbol{a}\big\Vert \cos \theta = \dfrac{\boldsymbol{a} \cdot \boldsymbol{v}}{\big\Vert\boldsymbol{v}\big\Vert} = \boldsymbol{a} \cdot \boldsymbol{v}
+$$
+$\boldsymbol{a}$ 在 $\boldsymbol{v}$ 方向上的向量投影：
+$$
+\text{proj}_{\boldsymbol{v}}{\boldsymbol{a}} = (\big\Vert\boldsymbol{a}\big\Vert \cos \theta)\boldsymbol{v} = (\boldsymbol{a} \cdot \boldsymbol{v})\boldsymbol{v} = (\boldsymbol{a}^T\boldsymbol{v})\boldsymbol{v} = (\boldsymbol{v}^T\boldsymbol{a})\boldsymbol{v}
+$$
+<img src="./_Resources/projection.png" style="zoom:30%;" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
