--- a/Math/矩阵.md
+++ b/Math/矩阵.md
@@ -287,13 +287,22 @@ $$
 
 #### 9.1 向量积
 
-
+$$
+\boldsymbol{a} = \begin{bmatrix} a_1&a_2&a_3 \end{bmatrix}, \quad \boldsymbol{b} = \begin{bmatrix} b_1&b_2&b_3 \end{bmatrix}\\\\
+\boldsymbol{a} \times \boldsymbol{b} = \begin{vmatrix} \boldsymbol{i}&\boldsymbol{j}&\boldsymbol{k} \\ a_1&a_2&a_3 \\ b_1&b_2&b_3 \end{vmatrix} = \boldsymbol{i}\begin{vmatrix}a_2&a_3\\b_2&b_3\end{vmatrix} - \boldsymbol{j}\begin{vmatrix}a_1&a_3\\b_1&b_3\end{vmatrix} + \boldsymbol{k}\begin{vmatrix}a_1&a_2\\b_1&b_2\end{vmatrix}
+$$
 
 #### 9.2 几何视角
 
+$$
+\boldsymbol{A} = \begin{bmatrix} a_{11}&a_{12} \\ a_{21}&a_{22} \end{bmatrix} = \begin{bmatrix} \boldsymbol{a}_1&\boldsymbol{a}_2 \end{bmatrix}
+$$
 
+$\boldsymbol{A}$ 的行列式值是以 $\boldsymbol{a}_1$ 和 $\boldsymbol{a}_2$ 为两条边构造得到的平行四边形的面积。
 
+<img src="./_Resources/matrix/matrix_001.png" style="zoom:30%;" />
 
+对于3阶方阵，它的行列式值的几何含义就是由其三个列向量构成的平行六面体的体积。
 
 
 
