--- a/Math/矩阵乘法.md
+++ b/Math/矩阵乘法.md
@@ -1,6 +1,6 @@
 ## 矩阵乘法
 
-### 1. 向量乘向量
+### 1 向量乘向量
 
 $$
 \boldsymbol{x} = \begin{bmatrix} x_1\\x_2\\\vdots\\x_n \end{bmatrix}, \quad
@@ -12,6 +12,10 @@ $$
 \boldsymbol{x} \cdot \boldsymbol{y} = \boldsymbol{y} \cdot \boldsymbol{x} = \langle\boldsymbol{x}, \boldsymbol{y}\rangle = \boldsymbol{x}^T\boldsymbol{y} = (\boldsymbol{x}^T\boldsymbol{y})^T = \boldsymbol{y}^T\boldsymbol{x} = x_1y_1 + x_2y_2 + \cdots + x_ny_n = \sum_{i=1}^nx_iy_i = \big\Vert \boldsymbol{a} \big\Vert \big\Vert \boldsymbol{b} \big\Vert \cos\theta
 $$
 
+向量 $\boldsymbol{x}$ 元素各自平方后再求和（$L_2$ 范数的平方）
+$$
+\boldsymbol{x} \cdot \boldsymbol{x} = \left\langle\boldsymbol{x},\boldsymbol{x}\right\rangle = \boldsymbol{x}^T\boldsymbol{x} = x_1^2 + x_2^2 + \cdots + x_n^2 = \sum_{i=1}^nx_i = \big\Vert\boldsymbol{x}\big\Vert_2^2
+$$
 列向量 $\boldsymbol{x}$ 和 $\boldsymbol{y}$ 的**张量积**，等同于  $\boldsymbol{x}$ 和 $\boldsymbol{y}^T$ 的矩阵乘法
 $$
 \boldsymbol{x}_{n \times 1} \otimes \boldsymbol{y}_{m \times 1} = \boldsymbol{x}\boldsymbol{y}^T \\
@@ -130,35 +134,31 @@ $$
 
 
 
-### 全 $1$ 列向量
+### 7 全 $1$ 列向量
 
 $$
 \boldsymbol{1}_{n \times 1} = \begin{bmatrix} 1\\1\\\vdots\\1 \end{bmatrix}
 $$
 
-复制行向量或列向量形成矩阵
-
+**复制行向量或列向量**形成矩阵
 $$
 \boldsymbol{1}_{n \times 1}\text{@}\boldsymbol{a}_{1 \times m} = \begin{bmatrix} \boldsymbol{a}\\\boldsymbol{a}\\\vdots\\\boldsymbol{a} \end{bmatrix}_{n \times m} \\\\
 \boldsymbol{b}_{n \times 1}\text{@}\boldsymbol{1}_{m \times 1}^T = \begin{bmatrix} \boldsymbol{b}&\boldsymbol{b}&\cdots&\boldsymbol{b} \end{bmatrix}_{n \times m}
 $$
-列向量元素求和
+列向量**元素求和**
 $$
 \boldsymbol{1} \cdot \boldsymbol{x} = \boldsymbol{1}^T\boldsymbol{x} = \boldsymbol{x}^T\boldsymbol{1} = \sum_{i=1}^n{x_i}
 $$
-元素平均数
+**元素平均数**
 $$
 \text{E}(\boldsymbol{x}) = \dfrac{1}{n}\sum_{i=1}^n{x_i} = \dfrac{\boldsymbol{1} \cdot \boldsymbol{x}}{n} = \dfrac{\boldsymbol{1}^T\boldsymbol{x}}{n} = \dfrac{\boldsymbol{x}^T\boldsymbol{1}}{n}
 $$
-元素平方和
+**每列元素求和**
 $$
-\boldsymbol{x}\cdot\boldsymbol{x} = \boldsymbol{x}^T\boldsymbol{x} = \sum_{i=1}^n{x_i^2}
+(\boldsymbol{1}_{n \times 1})^T\boldsymbol{X}_{n \times D} 
+= \begin{bmatrix} 1&1&\cdots&1 \end{bmatrix}_{1 \times n}\begin{bmatrix} x_{1,1}&x_{1,2}&\cdots&x_{1,D} \\ x_{2,1}&x_{2,2}&\cdots&x_{2,D} \\\vdots&\vdots&\ddots&\vdots \\ x_{n,1}&x_{n,2}&\cdots&x_{n,D} \end{bmatrix}_{n \times D} = \begin{bmatrix} \displaystyle\sum_{i=1}^nx_{1,i}&\displaystyle\sum_{i=1}^nx_{2,i}&\cdots&\displaystyle\sum_{i=1}^nx_{D,i} \end{bmatrix}_{1 \times D}
 $$
-
-每列元素求和
-
-
-
+**每列元素均值**
 $$
-
+\text{E}(\boldsymbol{X}) =
 $$
