--- a/Math/矩阵乘法.md
+++ b/Math/矩阵乘法.md
@@ -1,6 +1,6 @@
 ## 矩阵乘法
 
-### 1 向量乘向量
+### 1. 向量乘向量
 
 $$
 \boldsymbol{x} = \begin{bmatrix} x_1\\x_2\\\vdots\\x_n \end{bmatrix}, \quad
@@ -52,15 +52,13 @@ x_1\\x_2\\\vdots\\x_D
 \end{bmatrix}, \quad
 \boldsymbol{b}_{n \times 1} = 
 \begin{bmatrix}
-x_1\\x_2\\\vdots\\x_n
+b_1\\b_2\\\vdots\\b_n
 \end{bmatrix}
 $$
 
-- 有唯一解的方程组被称为**恰定方程组**。
-- 有无穷多解的方程组被称作**欠定方程组**。
-- 解不存在的方程组被称作**超定方程组**。
+有唯一解的方程组被称为**恰定方程组**；有无穷多解的方程组被称作**欠定方程组**；解不存在的方程组被称作**超定方程组**。
 
-如果矩阵 $\boldsymbol{A}$ 可逆，则 $\boldsymbol{A}\boldsymbol{x} = \boldsymbol{b}$ 有唯一解：
+如果矩阵 $\boldsymbol{A}$ 可逆，则 $\boldsymbol{A}\boldsymbol{x} = \boldsymbol{b}$ 有唯一解
 $$
 \boldsymbol{A}\boldsymbol{x} = \boldsymbol{b} \Rightarrow \boldsymbol{x} = \boldsymbol{A}^{-1}\boldsymbol{b}
 $$
@@ -73,7 +71,7 @@ $(\boldsymbol{A}^T\boldsymbol{A})^{-1}\boldsymbol{A}^T$ 常被称作 **广义逆
 #### 2.2 线性组合
 
 $$
-\boldsymbol{A}_{n \times D} = \begin{bmatrix} \boldsymbol{a}_1&\boldsymbol{a}_2&\cdots&\boldsymbol{a}_D \end{bmatrix}, \quad \boldsymbol{a}_i = \begin{bmatrix} a_{i,1} \\ a_{i,2} \\ \vdots \\ a_{i,n} \end{bmatrix} \\\\
+\boldsymbol{A}_{n \times D} = \begin{bmatrix} \boldsymbol{a}_1&\boldsymbol{a}_2&\cdots&\boldsymbol{a}_D \end{bmatrix}, \quad \boldsymbol{a}_i = \begin{bmatrix} a_{1,i} \\ a_{2,i} \\ \vdots \\ a_{n,i} \end{bmatrix} \\\\
 \begin{array}{lcl}
 \boldsymbol{A}\boldsymbol{x} = \boldsymbol{b} \\
 \Rightarrow \begin{bmatrix} \boldsymbol{a}_1&\boldsymbol{a}_2&\cdots&\boldsymbol{a}_D \end{bmatrix}\begin{bmatrix} x_1\\x_2\\\vdots\\x_D \end{bmatrix} = \boldsymbol{b} \\
@@ -156,9 +154,13 @@ $$
 **每列元素求和**
 $$
 (\boldsymbol{1}_{n \times 1})^T\boldsymbol{X}_{n \times D} 
-= \begin{bmatrix} 1&1&\cdots&1 \end{bmatrix}_{1 \times n}\begin{bmatrix} x_{1,1}&x_{1,2}&\cdots&x_{1,D} \\ x_{2,1}&x_{2,2}&\cdots&x_{2,D} \\\vdots&\vdots&\ddots&\vdots \\ x_{n,1}&x_{n,2}&\cdots&x_{n,D} \end{bmatrix}_{n \times D} = \begin{bmatrix} \displaystyle\sum_{i=1}^nx_{1,i}&\displaystyle\sum_{i=1}^nx_{2,i}&\cdots&\displaystyle\sum_{i=1}^nx_{D,i} \end{bmatrix}_{1 \times D}
+= \begin{bmatrix} 1&1&\cdots&1 \end{bmatrix}_{1 \times n}\begin{bmatrix} x_{1,1}&x_{1,2}&\cdots&x_{1,D} \\ x_{2,1}&x_{2,2}&\cdots&x_{2,D} \\\vdots&\vdots&\ddots&\vdots \\ x_{n,1}&x_{n,2}&\cdots&x_{n,D} \end{bmatrix}_{n \times D} = \begin{bmatrix} \displaystyle\sum_{i=1}^nx_{i,i}&\displaystyle\sum_{i=1}^nx_{i,2}&\cdots&\displaystyle\sum_{i=1}^nx_{i,D} \end{bmatrix}_{1 \times D}
 $$
 **每列元素均值**
 $$
-\text{E}(\boldsymbol{X}) =
+\text{E}(\boldsymbol{X}) = \frac{\boldsymbol{1}^T\boldsymbol{X}}{n} = \begin{bmatrix} \dfrac{\displaystyle\sum_{i=1}^nx_{i,1}}{n}&\dfrac{\displaystyle\sum_{i=1}^nx_{i,2}}{n}&\cdots&\dfrac{\displaystyle\sum_{i=1}^nx_{i,D}}{n} \end{bmatrix} = \begin{bmatrix} \mu_1&\mu_2&\cdots&\mu_D \end{bmatrix}
+$$
+$\text{E}(\boldsymbol{X})$ 常被称作数据矩阵 $\boldsymbol{X}$ 的**质心**，也常用列向量 $\boldsymbol{\mu}_{\boldsymbol{X}}$ 表示质心，它是 $\text{E}(\boldsymbol{X})$ 的转置
+$$
+\boldsymbol{\mu}_{\boldsymbol{X}} = \text{E}(\boldsymbol{X})^T = \begin{bmatrix} \mu_1\\\mu_2\\\vdots\\\mu_D \end{bmatrix} = \frac{\boldsymbol{X}^T\boldsymbol{1}}{n}
 $$
