--- a/Math/矩阵乘法_2.md
+++ b/Math/矩阵乘法_2.md
@@ -2,16 +2,50 @@
 
 ### 矩阵乘法一些注意点
 
-不满足乘法交换律
+- 一般情况下，**不满足乘法交换律**
+
 $$
 \boldsymbol{A}\boldsymbol{B} \neq \boldsymbol{B}\boldsymbol{A}
 $$
 
-平方
+- **平方**
+  - 方阵 $\boldsymbol{A}$ 和 $\boldsymbol{B}$
+  - 
 
-方阵 $\boldsymbol{A}$ 和 $\boldsymbol{B}$
 
 $$
 \boldsymbol{A}^2 = \boldsymbol{B}^2 \nRightarrow \boldsymbol{A} = \pm\boldsymbol{B}
 $$
 
+- 和的平方
+
+$$
+(\boldsymbol{A} + \boldsymbol{B})^2 = \boldsymbol{A}^2 + \boldsymbol{A}\boldsymbol{B} + \boldsymbol{B}\boldsymbol{A} + \boldsymbol{B}^2
+$$
+
+$$
+\boldsymbol{A}\boldsymbol{B} = \boldsymbol{A}\boldsymbol{C} \\\Rightarrow
+\boldsymbol{A}(\boldsymbol{B} - \boldsymbol{C}) = \boldsymbol{O} \\\nRightarrow
+\boldsymbol{B} = \boldsymbol{C}
+$$
+
+当 $\boldsymbol{A}$ 可逆时，
+$$
+\boldsymbol{A}\boldsymbol{B} = \boldsymbol{A}\boldsymbol{C} \\\Rightarrow
+\boldsymbol{A}^{-1}\boldsymbol{A}\boldsymbol{B} = \boldsymbol{A}^{-1}\boldsymbol{A}\boldsymbol{C} \\\Rightarrow
+\boldsymbol{I}\boldsymbol{B} = \boldsymbol{I}\boldsymbol{C} \\\Rightarrow
+\boldsymbol{B} = \boldsymbol{C}
+$$
+
+
+
+
+矩阵连乘展开遇到求逆或置换时，需要格外**注意调换顺序**
+$$
+\begin{array}{lcl}
+(\boldsymbol{A}\boldsymbol{B}\boldsymbol{C})^{-1} = \boldsymbol{C}^{-1}\boldsymbol{B}^{-1}\boldsymbol{A}^{-1} \\
+(\boldsymbol{A}\boldsymbol{B}\boldsymbol{C})^{T} = \boldsymbol{C}^{T}\boldsymbol{B}^{T}\boldsymbol{A}^{T} \\
+\Big((\boldsymbol{A}\boldsymbol{B}\boldsymbol{C})^{-1}\Big)^T = (\boldsymbol{C}^{-1}\boldsymbol{B}^{-1}\boldsymbol{A}^{-1})^T = (\boldsymbol{A}^{-1})^{T}(\boldsymbol{B}^{-1})^{T}(\boldsymbol{C}^{-1})^{T} = (\boldsymbol{A}^{T})^{-1}(\boldsymbol{B}^{T})^{-1}(\boldsymbol{C}^{T})^{-1}
+\end{array}
+$$
+矩阵转置后求逆等于矩阵求逆后转置：$(\boldsymbol{A}^T)^{-1} = (\boldsymbol{A}^{-1})^{T}$
