--- a/Math/特征值.md
+++ b/Math/特征值.md
@@ -1,23 +1,95 @@
-方阵 $\boldsymbol{A}$ ，存在非零向量 $\boldsymbol{v}$ 使得
+## 特征值分解
+
+对于方阵 $\boldsymbol{A}$，存在**非零向量** $\boldsymbol{v}$ 使得
 $$
 \boldsymbol{A}\boldsymbol{v} = \lambda\boldsymbol{v}
 $$
-$\boldsymbol{v}$ 就是 $\boldsymbol{A}$ 的特征向量，标量 $\lambda$ 称为特征值
+$\boldsymbol{v}$ 就是 $\boldsymbol{A}$ 的**特征向量**，标量 $\lambda$ 称为**特征值**。$\boldsymbol{I}$ 是单位阵，上式可以写作 $(\boldsymbol{A} - \lambda\boldsymbol{I})\boldsymbol{v} = 0$。
+
+**只有_可对角化矩阵_才能进行特征值分解**。方阵 $\boldsymbol{A}$ 相似于对角矩阵，即如果存在一个可逆矩阵 $\boldsymbol{V}$ 使得 $\boldsymbol{V}^{-1}\boldsymbol{A}\boldsymbol{V}$ 结果为对角矩阵，那么 $\boldsymbol{A}$ 就被称为**可对角化**。
+
+假设 $\boldsymbol{A}$ 是二维方阵，有两个特征值和特征向量
 $$
-(\boldsymbol{A} - \lambda\boldsymbol{I})\boldsymbol{v} = 0
+\begin{cases}
+\boldsymbol{A}\boldsymbol{v}_1 = \lambda_1\boldsymbol{v}_1 \\
+\boldsymbol{A}\boldsymbol{v}_2 = \lambda_2\boldsymbol{v}_2
+\end{cases}
+\Rightarrow
+\boldsymbol{A}\underbrace{\begin{bmatrix}\boldsymbol{v}_1&\boldsymbol{v}_2\end{bmatrix}}_{\boldsymbol{V}} = \underbrace{\begin{bmatrix}\boldsymbol{v}_1&\boldsymbol{v}_2\end{bmatrix}}_{\boldsymbol{V}}\underbrace{\begin{bmatrix}\lambda_1&0\\0&\lambda_2\end{bmatrix}}_{\boldsymbol{\varLambda}}
 $$
-$\boldsymbol{I}$ 是单位阵
+特征向量构成**特征向量矩阵 $\boldsymbol{V}$**，特征值构成对角阵**特征值矩阵 $\boldsymbol{\varLambda}$**，$\boldsymbol{A}$ 的**特征分解**：
+$$
+\boldsymbol{A}\boldsymbol{V} = \boldsymbol{V}\boldsymbol{\varLambda} \Rightarrow \boldsymbol{A} = \boldsymbol{V}\boldsymbol{\varLambda}\boldsymbol{V}^{-1}
+$$
 
-只有**可对角化矩阵**才能进行特征值分解
-
-一个方阵 $\boldsymbol{A}$ 相似于对角矩阵，即，如果存在一个可逆矩阵 $\boldsymbol{V}$ 使得 $\boldsymbol{V}^{-1}\boldsymbol{A}\boldsymbol{V}$ 结果为对角矩阵，那么 $\boldsymbol{A}$ 就被称为 可对角化。
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 1. 旋转 $\rightarrow$ 缩放 $\rightarrow$ 旋转
 
 
 $$
 \boldsymbol{A} = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}
 $$
+$$
+\boldsymbol{e}_1 = \begin{bmatrix} 1\\0 \end{bmatrix}, \boldsymbol{e}_2 = \begin{bmatrix} 0\\1 \end{bmatrix}, \boldsymbol{w}_1 = \begin{bmatrix} \sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix}, \boldsymbol{w}_2 = \begin{bmatrix} -\sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix}, \boldsymbol{w}_3 = \begin{bmatrix} -\sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix}, \boldsymbol{w}_4 = \begin{bmatrix} \sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix}
+$$
+
+$$
+\begin{array}{lcl}
+\boldsymbol{A}\boldsymbol{e}_1 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} 1\\0 \end{bmatrix} = \begin{bmatrix} 1.25\\-0.75 \end{bmatrix} \nonumber\\
+\boldsymbol{A}\boldsymbol{e}_2 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} 0\\1 \end{bmatrix} = \begin{bmatrix} -0.75\\1.25 \end{bmatrix} \nonumber\\
+\boldsymbol{A}\boldsymbol{w}_1 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} \sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix} = 0.5\begin{bmatrix} \sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix} = 0.5\boldsymbol{w}_1 \nonumber\\
+\boldsymbol{A}\boldsymbol{w}_2 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} -\sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix} = 2\begin{bmatrix} -\sqrt{2}/2\\\sqrt{2}/2 \end{bmatrix} = 2\boldsymbol{w}_2 \nonumber\\
+\boldsymbol{A}\boldsymbol{w}_1 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} -\sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix} = 0.5\begin{bmatrix} -\sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix} = 0.5\boldsymbol{w}_3 \nonumber\\
+\boldsymbol{A}\boldsymbol{w}_1 = \begin{bmatrix} 1.25&-0.75\\-0.75&1.25 \end{bmatrix}\begin{bmatrix} \sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix} = 2\begin{bmatrix} \sqrt{2}/2\\-\sqrt{2}/2 \end{bmatrix}= 2\boldsymbol{w}_4 \nonumber\\
+\end{array}
+$$
+
+
+
+
+
+
+
+
+
 **A** 对这些向量只产生缩放变换，不产生旋转效果，那么这些向量就称为 **A** 特征 向量，伸缩的比例就是特征值。
 
 注意，准确来说，如果 **w** 是 **A** 的特征向量，**w** 和 **Aw** 方向平行，同向或反向。
